<resources>
    <string name="app_name">Capstone Project</string>
    <string name="search_hint">Search</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notify_already_login">Already Login</string>
    <string name="click_to_main">Click to Main</string>
    <string name="mobile_email">Mobile Number / Email</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="int_age">Age</string>
    <string name="gender">Gender</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">Register</string>
    <string name="comments">Registered, please check your mailbox and activate the account activation email</string>
    <string name="back_to_login">Return to login screen</string>
    <string name="title">Capstone Project</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="int_mobile">Mobile Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="admin">Administrator</string>
    <string name="logout">Logout</string>
    <string name="coy_email">info@softmind.com</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="introduction">The Health Prediction application is an end user support and online consultation project. Here we propose an android application that allows users to get instant guidance on their health issues through an intelligent health care application online. The application is fed with various symptoms and the disease/illness associated with those systems. The application allows user to share their symptoms and issues. It then processes user’s symptoms to check for various illnesses that could be associated with it.</string>
    <string name="role">Role</string>
    <string name="view_change_profile">View/Change Profile</string>
    <string name="change_password">Change Password</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="list">List</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="view">view</string>
    <string name="save">Save</string>
</resources>
