<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/register_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/register_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_caption"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageButton"
                android:text="@string/title"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFF"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark"
                android:src="@drawable/ic_chevron_left_black"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/txt_caption"
                android:layout_alignParentTop="true"
                android:onClick="back" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_header"
            android:fillViewport="true"
            android:isScrollContainer="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/content_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center" >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/full_name_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >
                        <EditText
                            android:id="@+id/entered_username"
                            android:hint="@string/text_username"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/entered_email"
                            android:hint="@string/text_email"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_width="240dp"
                            android:maxLength="40"
                            android:inputType="textEmailAddress"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobile_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/entered_mobile"
                            android:hint="@string/int_mobile"
                            android:layout_width="240dp"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:inputType="number"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="230dp"
                        android:layout_height="45dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txt_gender_label"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:text="@string/gender"
                            android:textSize="18sp"
                            android:textColor="#8A000000"
                            android:layout_marginLeft="0dp"
                            android:layout_marginRight="10dp"
                            android:gravity="bottom" />
                        <Spinner
                            android:id="@+id/gender_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:spinnerMode="dropdown"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignRight="@+id/txt_gender_label"
                            android:textDirection="rtl"
                            android:textAlignment="textEnd"
                            android:gravity="end" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/gender_horizontal_line"
                        android:layout_width="240dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/gender_spinner"
                        android:layout_marginTop="1dp"
                        android:background="#8A000000" />

                    <RelativeLayout
                        android:layout_width="230dp"
                        android:layout_height="45dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txt_role_label"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:text="@string/role"
                            android:textSize="18sp"
                            android:textColor="#8A000000"
                            android:layout_marginLeft="0dp"
                            android:layout_marginRight="10dp"
                            android:gravity="bottom" />
                        <Spinner
                            android:id="@+id/role_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:spinnerMode="dropdown"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignRight="@+id/txt_role_label"
                            android:textDirection="rtl"
                            android:textAlignment="textEnd"
                            android:gravity="end" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/horizontal_line"
                        android:layout_width="240dp"
                        android:layout_height="1dp"
                        android:layout_below="@+id/role_spinner"
                        android:layout_marginTop="1dp"
                        android:background="#8A000000" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/entered_password"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/verify_password_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/entered_verify_Password"
                            android:hint="@string/verify_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/register_button"
                        android:text="@string/register"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="?attr/colorPrimary"
                        android:background="@drawable/rounded_red_corners"
                        android:drawableLeft="@drawable/ic_record_save"
                        android:layout_marginTop="15dp"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/finish_layout"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textColor"
                        android:text="@string/comments"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/back_button"
                        android:layout_marginTop="10dp"
                        android:text="@string/back_to_login"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>

